# yolo_data_manager

./: .gitignore  README.md  README_CN.md  pyproject.toml
docs/: CLI_USAGE.md  CLI_USAGE_EN.md  DESIGN.md  HANDOFF.md  HANDOFF_EN.md  PYTHON_USAGE.md  PYTHON_USAGE_EN.md
example/: data_filter_small.py  data_merge_class.py  data_select_copy.py  data_split.py  data_sta.py  data_vis.py  hmt_rtx6000.py  result_error_ana.py  result_metric.py
scripts/: run_ydm.py
src/yolo_data_manager/: __init__.py  cli.py  runtime.py  scripting.py
src/yolo_data_manager/annotation/: __init__.py  edit.py  query.py  remap.py
src/yolo_data_manager/converters/: __init__.py  coco.py  labelme.py  mask.py  pseudo.py  seg_det.py  voc.py  xanylabeling.py
src/yolo_data_manager/core/: __init__.py  errors.py  geometry.py  models.py  schema.py
src/yolo_data_manager/dataset/: __init__.py  duplicates.py  filter.py  merge.py  quality.py  select.py  split.py
src/yolo_data_manager/evaluation/: compare.py  error_analysis.py  metrics.py  review_pack.py
src/yolo_data_manager/io/: __init__.py  layout.py  loader.py  validator.py  writer.py
src/yolo_data_manager/stats/: __init__.py  compute.py  export.py  report.py
src/yolo_data_manager/vis/: renderer.py
tests/: test_core_workflow.py
