[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-data-manager"
version = "0.1.0"
description = "A small toolkit for loading, editing, querying, validating, converting, analyzing, and visualizing YOLO datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ydm = "yolo_data_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
